...
        stackView.axis = .vertical
        stackView.distribution = .fill

        titleLabel.font = UIFont.preferredFont(forTextStyle: .headline)
        titleLabel.text = "Loading Recipes"
        titleLabel.textAlignment = .center
        titleLabel.accessibilityIdentifier = "Recipe Title"

        containerView.layer.borderWidth = 1.0
        containerView.layer.borderColor = UIColor.systemBlue.cgColor

        buttonStackView.spacing = defaultSize
        buttonStackView.axis = .horizontal
...
        previousButton.setTitle("Previous", for: .normal)
        previousButton.setTitleColor(.tintColor, for: .normal)
        previousButton.addTarget(self, action: #selector(showPreviousRecipe(sender:)), for: .touchUpInside)

        infoButton.addTarget(self, action: #selector(showInfo(sender:)), for: .touchUpInside)
        
        nextButton.setTitle("Next", for: .normal)
        nextButton.setTitleColor(.tintColor, for: .normal)
        nextButton.addTarget(self, action: #selector(showNextRecipe(sender:)), for: .touchUpInside)
    }
}

// MARK: Previews
...
